--- a/src/main/resources/templates/books/list-books.html
+++ b/src/main/resources/templates/books/list-books.html
@@ -2,16 +2,19 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Books Directory</title>
+    <title>Books</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
+    <link rel="stylesheet" th:href="@{/style.css}">
+    <script type="text/javascript" th:src="@{/script.js}" ></script>
 
 </head>
 <body>
+<div th:replace="fragments/navigation :: navbar"></div>
+<div class="container">
 
-    <div class="container">
-
-        <h3>Book Directory</h3>
+        <h3>Books</h3>
         <hr>
 
         <table class="table table-border table-striped">
@@ -19,11 +22,11 @@
                 <tr>
                     <th>id</th>
                     <th>Title</th>
+                    <th>Author</th>
+                    <th>Publisher</th>
                     <th>Language</th>
                     <th>Year of publication</th>
-                    <th>Author Name</th>
-                    <th>Author Surname</th>
-                    <th>Publisher</th>
+                    <th>Edit</th>
                 </tr>
             </thead>
 
@@ -31,11 +34,16 @@
                 <tr th:each="tempBook : ${bookTypes}">
                     <td th:text="${tempBook.id}"/>
                     <td th:text="${tempBook.title}"/>
+                    <td th:text="${tempBook.author.firstName} + ' ' + ${tempBook.author.lastName}"/>
+                    <td th:text="${tempBook.publisher.name}"/>
                     <td th:text="${tempBook.language}"/>
                     <td th:text="${tempBook.yearOfPublication}"/>
-                    <td th:text="${tempBook.author.firstName}"/>
-                    <td th:text="${tempBook.author.lastName}"/>
-                    <td th:text="${tempBook.publisher.name}"/>
+                    <td>
+                        <a th:href="@{/books/update(bookTypeId=${tempBook.id})}"
+                           class="btn btn-primary btn-sm">
+                            Edit
+                        </a>
+                    </td>
                 </tr>
             </tbody>
         </table>
