--- a/src/main/resources/templates/books/list-book-management.html
+++ b/src/main/resources/templates/books/list-book-management.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Members</title>
+    <title>Books</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -16,13 +16,16 @@
 <body>
 <div th:replace="~{fragments/navigation :: navbar}"></div>
 <div class="container">
+    <div th:replace="~{fragments/messageOfSuccess :: message}"></div>
 
-    <h3>Members</h3>
+    <span th:text="${successMessage}" style="display:none;"></span>
+
+    <h3>Books</h3>
     <hr>
     <div id="dialogContainer"></div>
     <div style="overflow: auto;">
         <div style="float:left" class="col-3">
-            <form th:action="@{/members/list}" method="GET" autocomplete="off">
+            <form th:action="@{/books/findBooks}" method="GET" autocomplete="off">
                 <table style="width:100%">
                     <tbody style="width: -webkit-fill-available;">
                     <tr>
@@ -38,10 +41,7 @@
             </form>
         </div>
         <div style="float:right" class="col">
-            <a th:href="@{/members/add}"
-               class="btn btn-primary"><i class="fa fa-plus"></i>
-                Add New
-            </a>
+            <button type="button" class="btn btn-primary" style="width: max-content" onclick="addBook()"><i class="fa fa-plus"></i>Add new</button>
         </div>
     </div>
 
@@ -50,32 +50,33 @@
     <table class="table table-border table-striped">
         <thead class="table-dark">
         <tr>
-            <th>ID</th>
-            <th>Member</th>
-            <th>Number of lent books</th>
-            <th>Active</th>
+            <th>Id</th>
+            <th>Id - BookType</th>
+            <th>Date of lending</th>
             <th>Info</th>
-            <th>Edit</th>
+            <th>Delete</th>
         </tr>
         </thead>
 
         <tbody>
-        <tr th:each="member : ${members}">
-            <td th:text="${member.id}" ></td>
-            <td th:text="${member.firstName} + ' ' + ${member.lastName}"></td>
-            <td th:text="${member.books.size}"></td>
-            <td th:text="${member.active}"></td>
+        <tr th:each="tempBook : ${books}">
+            <td th:text="${tempBook.id}"/>
+            <td th:text="${tempBook.bookType.id} + ', ' + ${tempBook.bookType.title} + ', ' + ${tempBook.bookType.author.firstName} + ' ' + ${tempBook.bookType.author.lastName}"/>
+            <td th:text="${#temporals.format(tempBook.lendingTime, 'dd-MM-yyyy HH:mm')}"/>
             <td>
-                <button type="button" th:data-name="${member.id}" class="btn btn-info btn-sm"
-                        style="width: max-content" onclick="infoMember(this.getAttribute('data-name'))">
+                <button type="button" th:data-name="${tempBook.id}" class="btn btn-info btn-sm"
+                        style="width: max-content" onclick="infoBook(this.getAttribute('data-name'))">
                     <i class="fa fa-info"></i>Info</button>
             </td>
             <td>
-                <a th:href="@{/members/update(memberId=${member.id})}"
-                   class="btn btn-secondary btn-sm"> <i class="fa fa-edit"></i>
-                    Edit
+                <a th:href="@{/books/delete(bookId=${tempBook.id})}"
+                   class="btn btn-danger btn-sm py-1 "
+                   th:data-confirm-delete="|Are you sure you want to delete book with id = ${tempBook.id}?|"
+                   onclick="if (!confirm(this.getAttribute('data-confirm-delete'))) return false" >
+                   Delete
                 </a>
             </td>
+
         </tr>
         </tbody>
     </table>
@@ -84,8 +85,8 @@
 </body>
 
 <script>
-    function infoMember(id) {
-    fetch('/members/info?memberId='+ id)
+    function infoBook(bookId) {
+    fetch('/books/infoBook?bookId=' + bookId)
             .then(response => {
                 if (!response.ok) {
                     throw new Error('Network response was not ok');
@@ -96,16 +97,16 @@
                 document.getElementById('dialogContainer').innerHTML = html;
             })
             .then(() => {
-                let memberInfoModal = document.getElementById('memberInfoModal');
-                openModal(memberInfoModal);
+                let bookInfoModal = document.getElementById('bookInfoModal');
+                openModal(bookInfoModal);
             })
             .catch(error => console.error('Error fetching dialog content:', error));
 
     }
 
-    function closeMemberInfoModal() {
-    let memberInfoModal = document.getElementById('memberInfoModal');
-    closeModal(memberInfoModal);
+    function closeBookInfoModal() {
+    let bookInfoModal = document.getElementById('bookInfoModal');
+    closeModal(bookInfoModal);
 }
 </script>
 </html>
