--- a/src/main/resources/templates/books/list-books.html
+++ b/src/main/resources/templates/books/list-books.html
@@ -4,50 +4,100 @@
     <meta charset="UTF-8">
     <title>Books</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/style.css}">
     <script type="text/javascript" th:src="@{/script.js}" ></script>
 
 </head>
 <body>
-<div th:replace="fragments/navigation :: navbar"></div>
+<div th:replace="~{fragments/navigation :: navbar}"></div>
 <div class="container">
 
         <h3>Books</h3>
         <hr>
+    <div id="dialogContainer"></div>
+    <div style="overflow: auto;">
+        <div style="float:left" class="col-3">
+            <form th:action="@{/books/findBooks}" method="GET" autocomplete="off">
+                <table style="width:100%">
+                    <tbody style="width: -webkit-fill-available;">
+                    <tr>
+                        <td>
+                            <input id="filterText" class="form-control" type="text" name="filterText" th:value="${filterText}">
+                        </td>
+                        <td>
+                            <button type="submit" class="btn btn-primary btn-sm">Go</button>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </form>
+        </div>
+    </div>
 
-        <table class="table table-border table-striped">
-            <thead class="table-dark">
-                <tr>
-                    <th>id</th>
-                    <th>Title</th>
-                    <th>Author</th>
-                    <th>Publisher</th>
-                    <th>Language</th>
-                    <th>Year of publication</th>
-                    <th>Edit</th>
-                </tr>
-            </thead>
+    <hr>
 
-            <tbody>
-                <tr th:each="tempBook : ${bookTypes}">
-                    <td th:text="${tempBook.id}"/>
-                    <td th:text="${tempBook.title}"/>
-                    <td th:text="${tempBook.author.firstName} + ' ' + ${tempBook.author.lastName}"/>
-                    <td th:text="${tempBook.publisher.name}"/>
-                    <td th:text="${tempBook.language}"/>
-                    <td th:text="${tempBook.yearOfPublication}"/>
-                    <td>
-                        <a th:href="@{/books/update(bookTypeId=${tempBook.id})}"
-                           class="btn btn-primary btn-sm">
-                            Edit
-                        </a>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+    <table class="table table-border table-striped">
+        <thead class="table-dark">
+        <tr>
+            <th>Title</th>
+            <th>Author</th>
+            <th>Genre</th>
+            <th>Available</th>
+            <th>Lent</th>
+            <th>Total</th>
+            <th>Info</th>
+        </tr>
+        </thead>
+
+        <tbody>
+        <tr th:each="tempBook : ${bookInfo}">
+            <td th:text="${tempBook.title}"/>
+            <td th:text="${tempBook.author.firstName} + ' ' + ${tempBook.author.lastName}"/>
+            <td th:text="${tempBook.genreString}"/>
+            <td th:text="${tempBook.availablePieces}"/>
+            <td th:text="${tempBook.lentPieces}"/>
+            <td th:text="${tempBook.totalPieces}"/>
+            <td>
+                <button type="button" th:data-name="${tempBook.title}" th:data-author="${tempBook.author.id}" class="btn btn-info btn-sm"
+                        style="width: max-content" onclick="infoBook(this.getAttribute('data-name'), this.getAttribute('data-author'))">
+                    <i class="fa fa-info"></i>Info</button>
+            </td>
+
+        </tr>
+        </tbody>
+    </table>
     </div>
 
 </body>
+
+<script>
+    function infoBook(bookTitle, authorId) {
+    fetch('/books/info?bookTitle=' + bookTitle + '&authorId=' + authorId)
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error('Network response was not ok');
+                }
+                return response.text();
+            })
+            .then(html => {
+                document.getElementById('dialogContainer').innerHTML = html;
+            })
+            .then(() => {
+                let bookInfoModal = document.getElementById('bookInfoModal');
+                openModal(bookInfoModal);
+            })
+            .catch(error => console.error('Error fetching dialog content:', error));
+
+    }
+
+    function closeBookInfoModal() {
+    let bookInfoModal = document.getElementById('bookInfoModal');
+    closeModal(bookInfoModal);
+}
+</script>
 </html>
