--- a/src/main/resources/templates/fragments/messageOfSuccess.html
+++ b/src/main/resources/templates/fragments/messageOfSuccess.html
@@ -4,14 +4,14 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content" id="messageModalContent">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="messageModalLabel" th:text="${title}"></h5>
+                    <h5 class="modal-title" id="messageModalLabel" th:text="${title}" style="color: white;"></h5>
+                    <button type="button" class="btn btn-primary" onclick="closeMessageModal()">Close</button>
                 </div>
                 <div class="modal-body" id="author">
-                    <span th:text="${message}" id="message"></span>
+                    <span th:text="${message}" id="message" style="color: white;"></span>
 
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" onclick="closeMessageModal()">Close</button>
                 </div>
             </div>
         </div>
