--- a/src/main/resources/templates/members/add-member.html
+++ b/src/main/resources/templates/members/add-member.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <title>Books Directory</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/style.css}">
+    <script type="text/javascript" th:src="@{/script.js}" ></script>
+
 
 </head>
 <body>
@@ -15,7 +20,7 @@
     <h3>Members</h3>
     <hr>
 
-    <p class="h4 mb-4">Add Member</p>
+    <p class="h4 mb-4" th:text="${title}"></p>
 
 
     <span th:text="${successMessage}" style="display:none;"></span>
@@ -24,22 +29,21 @@
           th:object="${member}" method="POST" autocomplete="off">
 
         <input type="text" class="form-control" id="id" th:field="*{id}" style="display:none">
+        <input type="text" class="form-control" id="enrollmentDate" th:field="*{enrollmentDate}" style="display:none">
+        <input type="text" class="form-control" id="active" th:field="*{active}" style="display:none">
 
         <table style="width:100%">
             <tbody style="width: -webkit-fill-available;">
             <tr>
-                <td>
-                    <label for="firstName" >First Name</label>
-                </td>
-                <td style="width:50%; padding-left: 20px">
-                    <input type="text" class="form-control" id="firstName" th:field="*{firstName}" required>
+                <td class="col-6">
+                    <label for="firstName">First Name</label>
+                    <input type="text" style="padding-left: 20px" class="form-control" id="firstName" th:field="*{firstName}" required>
+
                 </td>
 
-                <td>
-                    <label for="lastName" style="margin-left:30px">Last Name</label>
-                </td>
-                <td style="width:50%; padding-left: 20px">
-                    <input type="text" class="form-control" id="lastName" th:field="*{lastName}" required>
+                <td class="col-6">
+                    <label for="lastName">Last Name</label>
+                    <input type="text" style="padding-left: 20px" class="form-control" id="lastName" th:field="*{lastName}" required>
                 </td>
 
             </tr>
@@ -51,18 +55,14 @@
         <table style="width:100%">
             <tbody style="width: -webkit-fill-available;">
             <tr>
-                <td>
+                <td class="col-6">
                     <label for="pin" >PIN</label>
-                </td>
-                <td style="width:50%; padding-left: 20px">
-                    <input type="text" class="form-control" id="pin" th:field="*{pin}" required>
+                    <input style="padding-left: 20px" type="text" class="form-control" id="pin" th:field="*{pin}" required>
                 </td>
 
-                <td>
-                    <label for="birthDate" style="margin-left:30px">Birth Date</label>
-                </td>
-                <td style="width:50%; padding-left: 20px">
-                    <input type="date" class="form-control" id="birthDate" th:field="*{birthDate}" required>
+                <td class="col-6">
+                    <label for="birthDate">Birth Date (MM/dd/yyyy)</label>
+                    <input type="date" style="padding-left: 20px" id="birthDate" class="form-control" th:field="*{birthDate}" required>
                 </td>
 
             </tr>
@@ -75,18 +75,14 @@
         <table style="width:100%">
             <tbody style="width: -webkit-fill-available;">
             <tr>
-                <td>
+                <td class="col-6">
                     <label for="email" >E-Mail</label>
-                </td>
-                <td style="width:50%; padding-left: 20px">
-                    <input type="text" class="form-control" id="email" th:field="*{email}" required>
+                    <input type="text" style="padding-left: 20px" class="form-control" id="email" th:field="*{email}" required>
                 </td>
 
-                <td>
-                    <label for="phoneNumber" style="margin-left:30px">Phone Number</label>
-                </td>
-                <td style="width:50%; padding-left: 20px">
-                    <input type="text" class="form-control" id="phoneNumber" th:field="*{phoneNumber}" required>
+                <td class="col-6">
+                    <label for="phoneNumber">Phone Number</label>
+                    <input type="text" style="padding-left: 20px" class="form-control" id="phoneNumber" th:field="*{phoneNumber}" required>
                 </td>
 
             </tr>
@@ -100,9 +96,7 @@
             <tr>
                 <td>
                     <label for="address">Address</label>
-                </td>
-                <td style="width:100%; padding-left: 20px">
-                    <input type="text" class="form-control" id="address" th:field="*{address}" required>
+                    <input type="text" style="padding-left: 20px" class="form-control" id="address" th:field="*{address}" required>
                 </td>
             </tr>
         </table>
@@ -112,25 +106,21 @@
         <table style="width:100%">
             <tbody style="width: -webkit-fill-available;">
             <tr>
-                <td>
+                <td class="col-6">
                     <label for="town" >Town</label>
-                </td>
-                <td style="width:50%; padding-left: 20px">
-                    <input type="text" class="form-control" id="town" th:field="*{town}" required>
+                    <input type="text" style="padding-left: 20px" class="form-control" id="town" th:field="*{town}" required>
                 </td>
 
-                <td>
-                    <label for="country" style="margin-left:30px">Country</label>
-                </td>
-                <td style="width:50%; padding-left: 20px">
-                    <input type="text" class="form-control" id="country" th:field="*{country}" required>
+                <td class="col-6">
+                    <label for="country">Country</label>
+                    <input type="text" style="padding-left: 20px" class="form-control" id="country" th:field="*{country}" required>
                 </td>
 
             </tr>
             </tbody>
         </table>
 
-
+<br>
 
         <table style="width: -webkit-fill-available;">
             <tbody style="width: -webkit-fill-available;">
@@ -168,12 +158,8 @@
         </div>
     </div>
 
-
+    </form>
 </div>
 </body>
-<script>
-
-
-</script>
 
 </html>
