--- a/src/main/resources/templates/members/info-member.html
+++ b/src/main/resources/templates/members/info-member.html
@@ -1,10 +1,114 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Books Directory</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
+    <link rel="stylesheet" th:href="@{/style.css}">
+    <script type="text/javascript" th:src="@{/script.js}" ></script>
+
 </head>
 <body>
 
+<div class="container">
+
+        <div th:fragment="dialogContent" class="modal" id="memberInfoModal" tabindex="-1" aria-labelledby="memberInfoModalLabel" aria-modal="true"
+             role="dialog" style="--bs-modal-width: unset;">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content modal-background">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="memberInfoLabel" th:text="Info" > </h5>
+                        <button type="button" class="btn btn-primary" onclick="closeMemberInfoModal()">Close</button>
+                    </div>
+                    <div class="modal-body" id="memberInfo">
+
+
+
+                        <table style="width:100%" class="info-table">
+                            <tbody style="width:100%">
+                                <tr>
+                                    <td>
+                                        <label>ID: </label> <output th:text="${infoMember.id}"></output>
+                                    </td>
+                                    <td>
+                                        <label>Enrollment Date: </label> <output th:text="${infoMember.enrollmentDate}"></output>
+                                    </td>
+                                    <td>
+                                        <label>Active: </label> <output th:text="${infoMember.active}"></output>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <label>First Name: </label> <output th:text="${infoMember.firstName}"></output>
+                                    </td>
+                                    <td>
+                                        <label>Last Name: </label> <output th:text="${infoMember.lastName}"></output>
+                                    </td>
+                                    <td>
+                                        <label>Date of Birth: </label> <output th:text="${infoMember.birthDate}"></output>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <label>PIN: </label> <output th:text="${infoMember.pin}"></output>
+                                    </td>
+                                    <td>
+                                        <label>E-Mail: </label> <output th:text="${infoMember.email}"></output>
+                                    </td>
+                                    <td>
+                                        <label>Phone Number: </label> <output th:text="${infoMember.phoneNumber}"></output>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <label>Address: </label> <output th:text="${infoMember.address}"></output>
+                                    </td>
+                                    <td>
+                                        <label>Town: </label> <output th:text="${infoMember.town}"></output>
+                                    </td>
+                                    <td>
+                                        <label>Country: </label> <output th:text="${infoMember.country}"></output>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <label>Lent Books: </label>
+                        <br>
+                        <table class="table table-border table-striped">
+                            <thead class="table-light">
+                            <tr>
+                                <th>Id</th>
+                                <th>Title</th>
+                                <th>Author</th>
+                                <th>Publisher</th>
+                                <th>Language</th>
+                                <th>Year of publication</th>
+                                <th>Lending Date</th>
+                            </tr>
+                            </thead>
+
+                            <tbody>
+                            <tr th:each="book : ${infoMember.books}">
+                                <td th:text="${book.id}"/>
+                                <td th:text="${book.bookType.title}"/>
+                                <td th:text="${book.bookType.author.firstName} + ' ' + ${book.bookType.author.lastName}"/>
+                                <td th:text="${book.bookType.publisher.name}"/>
+                                <td th:text="${book.bookType.language}"/>
+                                <td th:text="${book.bookType.yearOfPublication}"/>
+                                <td th:text="${book.lendingTime}"/>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+</div>
 </body>
+
 </html>
