--- a/src/main/resources/templates/publisher/list-publishers.html
+++ b/src/main/resources/templates/publisher/list-publishers.html
@@ -4,14 +4,119 @@
     <meta charset="UTF-8">
     <title>Publishers</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/style.css}">
     <script type="text/javascript" th:src="@{/script.js}" ></script>
 
 </head>
 <body>
-<div th:replace="fragments/navigation :: navbar"></div>
+<div th:replace="~{fragments/navigation :: navbar}"></div>
+<div class="container">
+    <div th:replace="~{fragments/messageOfSuccess :: message}"></div>
+    <h3>Publishers</h3>
+    <hr>
+
+    <div id="dialogContainer"></div>
+
+    <div style="overflow: auto;">
+        <div style="float:left" class="col-3">
+            <form th:action="@{/publishers/list}" method="GET" autocomplete="off">
+                <table style="width:100%">
+                    <tbody style="width: -webkit-fill-available;">
+                    <tr>
+                        <td>
+                            <input id="filterText" class="form-control" type="text" name="filterText" th:value="${filterText}">
+                        </td>
+                        <td>
+                            <button type="submit" class="btn btn-primary btn-sm">Go</button>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </form>
+        </div>
+        <div style="float:right" class="col">
+            <button type="button" class="btn btn-primary" style="width: max-content" onclick="addPublisher()">
+                <i class="fa fa-plus"></i>Add new</button>
+        </div>
+    </div>
+
+    <hr>
+
+    <table class="table table-border table-striped">
+        <thead class="table-dark">
+        <tr>
+            <th>Name</th>
+            <th>Info</th>
+            <th>Edit</th>
+        </tr>
+        </thead>
+
+        <tbody>
+        <tr th:each="publisher : ${publishers}">
+            <td th:text="${publisher.name}"></td>
+            <td>
+                <button type="button" th:data-name="${publisher.id}" class="btn btn-info btn-sm"
+                        style="width: max-content" onclick="infoPublisher(this.getAttribute('data-name'))">
+                    <i class="fa fa-info"></i>Info</button>
+            </td>
+            <td>
+                <button type="button" th:data-name="${publisher.id}" class="btn btn-secondary btn-sm"
+                        style="width: max-content" onclick="updatePublisher(this.getAttribute('data-name'))">
+                    <i class="fa fa-edit"></i>Edit</button>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 
 </body>
+
+<script>
+    function updatePublisher(id) {
+    fetch('/publishers/update?publisherId='+ id)
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error('Network response was not ok');
+                }
+                return response.text();
+            })
+            .then(html => {
+                document.getElementById('dialogContainer').innerHTML = html;
+            })
+            .then(() => {
+                let publisherModal = document.getElementById('publisherModal');
+                openModal(publisherModal);
+            })
+            .catch(error => console.error('Error fetching dialog content:', error));
+
+    }
+    function infoPublisher(id) {
+    fetch('/publishers/info?publisherId='+ id)
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error('Network response was not ok');
+                }
+                return response.text();
+            })
+            .then(html => {
+                document.getElementById('dialogContainer').innerHTML = html;
+            })
+            .then(() => {
+                let publisherInfoModal = document.getElementById('publisherInfoModal');
+                openModal(publisherInfoModal);
+            })
+            .catch(error => console.error('Error fetching dialog content:', error));
+
+    }
+
+    function closePublisherInfoModal() {
+    let publisherInfoModal = document.getElementById('publisherInfoModal');
+    closeModal(publisherInfoModal);
+}
+</script>
 </html>
