--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -32,6 +32,13 @@
                     <a class="nav-link" th:href="@{/members/list}" style="font-size: large;">Members</a>
                 </li>
             </div>
+            <form action="#" th:action="@{/logout}"
+                  method="POST">
+
+                <input type="submit" value="Logout" class="btn btn-outline-primary mt-2" />
+
+            </form>
         </div>
+
     </nav>
 </div>
